--- a/svelte/index.html
+++ b/svelte/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chatbot - svelte</title>
     <link rel="stylesheet" href="./jsplumbtoolkit.css" />
+    <link rel="stylesheet" href="./jsplumbtoolkit-controls.css" />
     <link rel="stylesheet" href="./app.css" />
   </head>
 
